# RATIO

./: README.md
src/: CMakeLists.txt
src/myCode/: CMakeLists.txt
src/myCode/src/: demo.hpp  main.cpp
src/myLib/: CMakeLists.txt
src/myLib/doc/: CMakeLists.txt
src/myLib/include/: .internal.hpp.swp  Rational.hpp  internal.hpp
src/myLib/src/: Rational.cpp
src/myTest/: CMakeLists.txt
src/myTest/src/: sample_test.cpp
